@@ -105,7 +105,8 @@ Below is the command to start a **Mainnet FullNode**, specifying the configurati
 ```
 $ nohup java -Xms9G -jar ./build/libs/FullNode.jar -c config.conf &
 ```
-*   `nohup ... &`: Runs the command in the background and ignores the hangup signal.
+
+* `nohup ... &`: Runs the command in the background and ignores the hangup signal.
 * The `Xms9G` parameter suggests the minimal heap size to `9 GB` for connecting to Mainnet.
 * To start a **Nile Testnet FullNode** or **Private Network FullNode**, use the corresponding configuration file links provided above.
 
@@ -137,11 +138,32 @@ $ nohup java -Xmx9G -XX:+UseZGC \
              -jar ./build/libs/FullNode.jar -c main_net_config.conf &
 ```
 
-* `-XX:+UseConcMarkSweepGC`: Specifies the **Concurrent Mark Sweep (CMS) garbage collector**. This parameter must be placed before the `-jar` parameter.
-* `-Xms`: initial value of the Java Virtual Machine (JVM) heap size, `-Xmx`: maximum value of the JVM heap size, `-XX:NewRatio`: ratio of the old generation to the young generation in the heap, for example, `-XX:NewRatio=2` means the size of the old generation is twice that of the young generation.
-    * For an ordinary FullNode, the recommended setting is: `-Xms12G -Xmx12G -XX:NewRatio=3`
-    * For a block-producing FullNode, the recommended setting is: `-Xms24G -Xmx24G -XX:NewRatio=3`
-* To start a **Nile Testnet FullNode** or **Private Network FullNode**, use the corresponding configuration file links provided at the beginning of this section.
+#### Java Startup Parameters Explanation
+**General & Memory Parameters:**
+
+*   `-Xms` / `-Xmx`: Sets the initial and maximum JVM heap size.
+    > For minimum hardware requirements (16 GB RAM servers): Suggested JDK 8 use `-Xms9G -Xmx12G`; JDK 17 use `-Xmx9G`.
+    > For servers with ≥32 GB RAM, suggest setting the maximum heap size (`-Xmx`) to 40 % of total RAM, with the minimum to `-Xms9G`.
+*   `-XX:MetaspaceSize` / `-XX:MaxMetaspaceSize`: Sets the initial and maximum size of Metaspace (class metadata).
+*   `-XX:MaxDirectMemorySize`: Limits the memory used by NIO Direct Byte Buffers.
+*   `-XX:ReservedCodeCacheSize`: Sets the maximum size of the JIT code cache.
+*   `-XX:+UseCodeCacheFlushing`: Allows the JVM to flush the code cache when full.
+*   `-XX:+HeapDumpOnOutOfMemoryError`: Dumps the heap to a file if an OutOfMemoryError occurs.
+
+**JDK 8 (CMS GC) Specific:**
+
+*   `-XX:+UseConcMarkSweepGC`: Enables the Concurrent Mark Sweep (CMS) garbage collector.
+*   `-XX:NewRatio=3`: Sets the ratio of Old Generation to Young Generation to 3:1.
+*   `-XX:+CMSScavengeBeforeRemark`: Triggers a minor GC before the CMS Remark phase to reduce pause time.
+*   `-XX:+ParallelRefProcEnabled`: Enables parallel reference processing to reduce pause times.
+*   `-XX:+UseCMSInitiatingOccupancyOnly` & `-XX:CMSInitiatingOccupancyFraction=70`: Forces CMS to start collection when Old Gen is 70% full.
+*   `-XX:+PrintGCDetails`, `-XX:+PrintGCDateStamps`, `-Xloggc:gc.log`: Legacy GC logging settings.
+
+**JDK 17 (ZGC) Specific:**
+*   `-XX:+UseZGC`: Enables ZGC, a scalable low-latency garbage collector.
+*   `-Xlog:gc...`: Unified JVM logging configuration. The example configures GC logs with file rotation (10 files, 100MB each).
+
+
 
 ### Starting a Block Production Node
 
